# internal/api/api.go
@@ -14,7 +14,7 @@ var (
 
 type API interface {
 	GetTags(ctx context.Context) ([]*models.Tag, error)
-	GetImages(ctx context.Context, tags []string, sort string, asc bool, desc bool, page int64, limit int64) (*models.ImagePage, error)
+	GetImages(ctx context.Context, tags []string, sort string, order string, page int64, limit int64) (*models.ImagePage, error)
 	GetImage(ctx context.Context, name string, version string) (*models.Image, error)
 	GetImageDescription(ctx context.Context, name string, version string) (*models.ImageDescription, error)
 	GetImageReleaseNotes(ctx context.Context, name string, version string) (*models.ImageReleaseNotes, error)
